--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "epistemology-back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,8 +18,14 @@
   "homepage": "https://github.com/daniel-jf/Epistemology-back-end#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.9.7"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.7",
+    "nodejs": "0.0.0"
   }
 }
